--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ task dist(type: Zip, dependsOn: 'getUpdateChecker') {
 		include 'languages/*'
 		include 'preview/.htaccess'
 		include 'preview/preview.php'
+		include 'preview/guzzle/**'
 	}
 	from(file("${buildDir}/plugin-update-checker")) {
 		into('plugin-update-checker')
